syntax = "proto3";

package search;

option go_package = "gen/search-service/pb;pb";

import "google/api/annotations.proto";

service SearchService {
	rpc GlobalSearch (GlobalSearchRequest) returns (GlobalSearchResponse) {
		option (google.api.http) = {
			get: "/search"
		};
	}

	rpc UserSearch (UserSearchRequest) returns (UserSearchResponse) {
		option (google.api.http) = {
			get: "/search/user"
		};
	}

	rpc CommunitySearch (CommunitySearchRequest) returns (CommunitySearchResponse) {
		option (google.api.http) = {
			get: "/search/community"
		};
	}

	rpc ThreadSearch (ThreadSearchRequest) returns (ThreadSearchResponse) {
		option (google.api.http) = {
			get: "/search/thread"
		};
	}
}

message GlobalSearchRequest {
	string query = 1;
}

message GlobalSearchResponse {
	repeated string thread_ids = 1;
	repeated string user_ids = 2;
	repeated string community_ids = 3;
}

message UserSearchRequest {
	string query = 1;
}

message UserSearchResponse {
	repeated string user_ids = 1;
}

message CommunitySearchRequest {
	string query = 1;
}

message CommunitySearchResponse {
	repeated string community_ids = 1;
}

message ThreadSearchRequest {
	string query = 1;
}

message ThreadSearchResponse {
	repeated string thread_ids = 1;
}